--- a/portfolio.html
+++ b/portfolio.html
@@ -370,7 +370,7 @@
                 <div class="about-info">
                     <h3 class="sub-heading">About Me</h3>
                     <h1 class="heading">Experince better <br> with better design</h1>
-                    <p class="text">Third year  Design student, future UI/UX designer. My passion for UI/UX brought me to the School of Design at World University of Design, where I am working on my B.des in Computer Science and Design.</p>
+                    <p class="text">Working as a UX designer in Mumbai. My passion for UI/UX brought me to the School of Design at World University of Design, where I am working on my B.des in Computer Science and Design.</p>
                     <div class="cta">
                         <a href="mailto:saluja.suparn@gmail.com" class="btn">Contact Me</a>
                         <a href="SuparnSaluja_Resume.pdf" download="" class="btn secondary-btn">Download CV</a>
@@ -410,7 +410,7 @@
                       <circle cx="75" cy="75"  r="68" />
                     </svg>
                     <h2 class="counter">
-                      <span data-target="89">0</span>%
+                      <span data-target="40">0</span>%
                     </h2>
                   </div>
                   <div class="sk-title">HTML</div>
@@ -421,7 +421,7 @@
                       <circle cx="75" cy="75"  r="68" />
                     </svg>
                     <h2 class="counter">
-                      <span data-target="68">0</span>%
+                      <span data-target="48">0</span>%
                     </h2>
                   </div>
                   <div class="sk-title">CSS</div>
