--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
                     </div>
                 </div>
                 <div class="showcase-image">
-                    <img src="Suparn-Saluja.png" class="person" alt="Suparn">
+                    <img src="Suparn portfolio.jpg" class="person" alt="Suparn">
                     <img src="circle1.png" class="circle" alt="">
                     <img src="dots.png" class="dots" alt="">
                 </div>
@@ -905,6 +905,7 @@
         );</script>
     </body>
 </html>
+
 
 
 
